PR/11317: Hubert Feyrer: Recognize mismatched parentheses inside old style command substitution.