bin/sh/parser.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: parser.c,v 1.69 2008/08/23 10:05:52 christos Exp $	*/
+/*	$NetBSD: parser.c,v 1.70 2008/11/05 22:04:43 christos Exp $	*/
 
 /*-
  * Copyright (c) 1991, 1993
@@ -37,7 +37,7 @@
 #if 0
 static char sccsid[] = "@(#)parser.c	8.7 (Berkeley) 5/16/95";
 #else
-__RCSID("$NetBSD: parser.c,v 1.69 2008/08/23 10:05:52 christos Exp $");
+__RCSID("$NetBSD: parser.c,v 1.70 2008/11/05 22:04:43 christos Exp $");
 #endif
 #endif /* not lint */
 
@@ -1394,6 +1394,7 @@ parsebackq: {
                 char *pout;
                 int pc;
                 int psavelen;
+                int nparen = 0;
                 char *pstr;
 
 
@@ -1426,6 +1427,14 @@ parsebackq: {
                                     && (!ISDBLQUOTE() || pc != '"'))
                                         STPUTC('\\', pout);
 				break;
+			case '(':
+				nparen++;
+				break;
+
+			case ')':
+				if (--nparen < 0)
+				    synerror("`)' unexpected");
+				break;
 
 			case '\n':
 				plinno++;
@@ -1443,6 +1452,8 @@ parsebackq: {
 			STPUTC(pc, pout);
                 }
 done:
+		if (nparen)
+			synerror("Missing `)'");
                 STPUTC('\0', pout);
                 psavelen = pout - stackblock();
                 if (psavelen > 0) {
